sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: ')' expected but ';' found.
		 	                     echange(list(i);list(i-1))
                                                            ^AlgBubbleSort1:8: error: ';' expected but ')' found.
		 	                     echange(list(i);list(i-1))
                                                                      ^AlgBubbleSort1:21: error: ')' expected but '}' found.
		            }
                            ^